# OptimizationAlgorithm

./: README.md  pyproject.toml
evolutionary/: genetic.py
example/: tsp_example.py
heuristic/: simulated_annealing.py
metaheuristic/: ant_system.py  genetic.py  immune.py
optimization/example/: SMA_example.py  aco_example.py  pso_example.py  sa_example.py  tsp_example.py
optimization/metaheuristic/: ant_colony_system.py  ant_system.py  genetic.py  immune.py  particle_swarm.py  simulated_annealing.py
optimization/misc/: utils.py
swarm/: particle_swarm.py
swarm_intelligence/: simulated_annealing.py
tests/: test_genetic.py
