[tool.poetry]
name = "optimization"
version = "0.1.0"
description = "Implement or test some optimization algorithms"
authors = ["Jason Shiao <b01901105@ntu.edu.tw>"]
readme = "README.md"
include = ["data/**/*"]

[tool.poetry.scripts]
run_aco_example = "optimization.bin.run_aco_example:main"
run_sma_example = "optimization.bin.run_sma_example:main"
run_pso_example = "optimization.bin.run_pso_example:main"
run_sa_example = "optimization.bin.run_sa_example:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
benchmark-functions = "^1.1.3"
scipy = "^1.6.0"
graycode = "^1.0.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
